--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
+    "dev": "prisma generate && next dev --turbopack",
+    "build": "prisma generate && next build",
     "start": "next start",
     "type-check": "tsc --noEmit",
     "type-check:watch": "tsc --noEmit --watch",
@@ -37,9 +37,12 @@
     "es-toolkit": "^1.31.0",
     "hono": "^4.6.17",
     "ky": "^1.7.4",
+    "lucide-react": "^0.473.0",
+    "motion": "^12.0.0",
     "nanoid": "^5.0.9",
     "next": "15.1.5",
     "next-themes": "^0.4.4",
+    "nuqs": "^2.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
@@ -70,6 +73,7 @@
     "postcss": "^8",
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-tailwindcss": "^0.6.10",
+    "prisma": "^6.2.1",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5",
