--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "date-fns": "^4.1.0",
     "es-toolkit": "^1.31.0",
     "hono": "^4.6.17",
+    "jose": "^6.0.8",
     "ky": "^1.7.4",
     "lucide-react": "^0.473.0",
     "motion": "^12.0.0",
